--- a/docs/report/refs.bib
+++ b/docs/report/refs.bib
@@ -1,10 +1,13 @@
-@misc{3d_projection,
-  author       = {{Wikipedia contributors}},
-  title        = {3D projection --- {Wikipedia}{,} The Free Encyclopedia},
-  year         = {2023},
-  url          = {https://en.wikipedia.org/w/index.php?title=3D_projection&oldid=1148285432},
-  note         = {[accessed 6-April-2023]}
+@book{3d_projection,
+  title={Transformations and Projections in Computer Graphics},
+  author={Salomon, D.},
+  isbn={9781846286209},
+  lccn={2006923906},
+  url={https://books.google.co.uk/books?id=6CzuydFlMpwC},
+  year={2007},
+  publisher={Springer London}
 }
+
 
 @article{ada,
   title  = {{How Ada advances the science of graphics with DLSS 3.}},
@@ -138,9 +141,14 @@
   url = {https://github.com/CedricGuillemet/ImGuizmo}
 }
 
-@article{indentation,
-  title = {K\&R Indentation Style},
-  url   = {https://en.wikipedia.org/wiki/Indentation_style}
+@book{indentation,
+  title     = "C. Style",
+  author    = "Straker, David",
+  publisher = "Prentice-Hall",
+  month     =  nov,
+  year      =  1991,
+  address   = "London, England",
+  language  = "en"
 }
 
 @misc{mit,
@@ -148,14 +156,20 @@
   url   = {https://opensource.org/license/mit/}
 }
 
-
-@misc{moire_pattern,
-  author = {{Wikipedia contributors}},
-  title  = {Moire Pattern --- {Wikipedia}{,} The Free Encyclopedia},
-  year   = {2023},
-  url    = {https://en.wikipedia.org/wiki/Moir%C3%A9_pattern},
-  note   = {[accessed 21-April-2023]}
+@article{moire_pattern,
+ ISSN = {00368733, 19467087},
+ URL = {http://www.jstor.org/stable/24936147},
+ author = {Gerald Oster and Yasunori Nishijima},
+ journal = {Scientific American},
+ number = {5},
+ pages = {54--63},
+ publisher = {Scientific American, a division of Nature America, Inc.},
+ title = {MOIRÉ PATTERNS},
+ urldate = {2023-05-11},
+ volume = {208},
+ year = {1963}
 }
+
 
 
 @misc{premake,
